force-app/main/default/objects/Inventory_Chile__c/Inventory_Chile__c.object-meta.xml
<CustomObject>
    <label>Inventory Chile</label>
    <nameField>
        <displayFormat>IC-{0000}</displayFormat>
        <label>Inventory Chile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Chile</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>