force-app/main/default/objects/Inventory_Chile__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Inventory Chile</relationshipLabel>
    <relationshipName>Inventory_Chile</relationshipName>
    <type>Lookup</type>
</CustomField>