force-app/main/default/objects/Inventory_Chile__c/fields/Store_Code__c.field-meta.xml
<CustomField>
    <fullName>Store_Code__c</fullName>
    <label>Store Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>