force-app/main/default/objects/Inventory_Chile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Store__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Model__c</columns>
    <columns>Inventory_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>